Created an example of a worker agent that mimics deep research

--- a/src/a2atests/a2atests.csproj
+++ b/src/a2atests/a2atests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\a2alib\a2alib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
