--- a/src/a2alib/a2alib.csproj
+++ b/src/a2alib/a2alib.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
+  </ItemGroup>
+
 </Project>
