--- a/samples/researcher/researcher.csproj
+++ b/samples/researcher/researcher.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\a2alib\a2alib.csproj" />
+    <ProjectReference Include="..\..\src\a2a.AspNetCore\a2a.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
