--- a/src/a2a.AspNetCore/a2a.AspNetCore.csproj
+++ b/src/a2a.AspNetCore/a2a.AspNetCore.csproj
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+  </ItemGroup><ItemGroup>
+  <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
+  <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+  <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+</ItemGroup>
 
 </Project>
