--- a/src/a2alib/a2alib.csproj
+++ b/src/a2alib/a2alib.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
     <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
   </ItemGroup>
 
