--- a/src/SharpA2A.Core/SharpA2A.Core.csproj
+++ b/src/SharpA2A.Core/SharpA2A.Core.csproj
@@ -15,7 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
+    <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
   </ItemGroup>
 
