--- a/src/SharpA2A.Core/SharpA2A.Core.csproj
+++ b/src/SharpA2A.Core/SharpA2A.Core.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+	<TargetFrameworks>net9.0;net8.0;netstandard2.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>12.0</LangVersion>
     
     <!-- NuGet Package Properties -->
     <PackageId>SharpA2A.Core</PackageId>
@@ -15,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
     <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
