--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -8,21 +8,25 @@ on:
   pull_request:      
     branches: [ "main" ]  
   
-jobs:    
-  build:  
+jobs: 
+  build:
     runs-on: ubuntu-latest  
     strategy:  
       matrix:  
-        dotnet-version: [8.0.x, 9.0.x]  
-    steps:      
+        include:
+          - dotnet-version: 8.x
+            framework: net8.0
+          - dotnet-version: 9.x
+            framework: net9.0
+    steps:
       - uses: actions/checkout@v4      
       - name: Setup .NET        
         uses: actions/setup-dotnet@v4        
         with:          
           dotnet-version: ${{ matrix.dotnet-version }}      
       - name: Restore dependencies        
-        run: dotnet restore      
+        run: dotnet restore --framework ${{ matrix.framework }}    
       - name: Build        
-        run: dotnet build --no-restore      
+        run: dotnet build --no-restore --framework ${{ matrix.framework }}
       - name: Test        
-        run: dotnet test --no-build --verbosity normal 
+        run: dotnet test --no-build --verbosity normal --framework ${{ matrix.framework }}
