--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -26,7 +26,7 @@ jobs:
         with:          
           dotnet-version: ${{ matrix.dotnet-version }}      
       - name: Restore dependencies        
-        run: dotnet restore --framework ${{ matrix.framework }}    
+        run: dotnet restore 
       - name: Build        
         run: dotnet build --no-restore --framework ${{ matrix.framework }}
       - name: Test        
