--- a/samples/A2ACli/A2ACli.csproj
+++ b/samples/A2ACli/A2ACli.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<RootNamespace>A2A</RootNamespace>
 		<AssemblyName>A2A.Cli</AssemblyName>
 		<LangVersion>12</LangVersion>
