--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -42,6 +42,6 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: BuildLibs
-        run: dotnet build
+        run: dotnet build --framework net9.0
       - name: TestLibs
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity normal --framework net9.0
