fixed paths for ubuntu

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: BuildLibs
-        run: dotnet build .\src\SharpA2ALibs.sln --framework ${{ matrix.framework }}
+        run: dotnet build ./src/SharpA2ALibs.sln --framework ${{ matrix.framework }}
       - name: TestLibs
-        run: dotnet test .\src\SharpA2ALibs.sln --no-build --verbosity normal --framework ${{ matrix.framework }}
+        run: dotnet test ./src/SharpA2ALibs.sln --no-build --verbosity normal --framework ${{ matrix.framework }}
   buildSamples:
     runs-on: ubuntu-latest
     steps:
