--- a/src/SharpA2A.AspNetCore/SharpA2A.AspNetCore.csproj
+++ b/src/SharpA2A.AspNetCore/SharpA2A.AspNetCore.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
   
   <ItemGroup>
