--- a/src/SharpA2A.Core/SharpA2A.Core.csproj
+++ b/src/SharpA2A.Core/SharpA2A.Core.csproj
@@ -20,10 +20,7 @@
     <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
     <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DomFactory\DomFactory.csproj" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
   
   <ItemGroup>
