--- a/src/SharpA2A.Core/SharpA2A.Core.csproj
+++ b/src/SharpA2A.Core/SharpA2A.Core.csproj
@@ -17,8 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.5" />
-    <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
-    <PackageReference Include="Polly" Version="8.5.2" />
+    <PackageReference Include="OpenTelemetry.Api" Version="1.*" />
+    <PackageReference Include="Polly" Version="8.4.*" />
     <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.5" />
   </ItemGroup>
 
